# memberlist

./: .codecov.yml  .gitignore  BACKUP.md  CHANGELOG.md  Cargo.toml  LICENSE  README-zh_CN.md  README.md  TODO.md  rustfmt.toml
core/: Cargo.toml  x.rs
core/src/: api.rs  awareness.rs  base.rs  broadcast.rs  checksum.rs  compress.rs  delegate.rs  dns.rs  error.rs  keyring.rs  label.rs  lib.rs  memberlist.rs  network.rs  options.rs  queue.rs  security.rs  showbiz.rs  state.rs  suspicion.rs  timer.rs  transport.rs  types.rs  types2.rs  util.rs  version.rs
core/tests/: async_std.rs  smol.rs  tokio.rs
dart/: .flutter_rust_bridge.yml  Cargo.toml  build.rs
dart/c_output_path/: c_output.h
dart/lib/: pubspec.yaml
dart/src/: bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs  options.rs
examples/toydb/: Cargo.toml  README.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: messages.rs
js/: Cargo.toml
js/pkg/: package.json  showbiz.d.ts  showbiz.js  showbiz_bg.js  showbiz_bg.wasm  showbiz_bg.wasm.d.ts
js/src/: lib.rs  wasm.rs
js/wasmer/: showbiz.wasm  wapm.toml
legacy/memberlist-net/: Cargo.toml
legacy/memberlist-quic/: Cargo.toml
memberlist/: Cargo.toml  README.md  build.rs
memberlist-compio/: Cargo.toml  README.md
memberlist-compio/src/: address.rs  bridge.rs  command.rs  driver.rs  driver_options.rs  driver_shared.rs  error.rs  events.rs  lib.rs  maybe_resolved.rs  memberlist.rs  options.rs  quic.rs  quic_driver.rs  snapshot.rs  tcp.rs  tls.rs
memberlist-compio/tests/: cidr.rs  cidr_quic.rs  data_plane.rs  delegate_hooks.rs  directed_io.rs  failure_detection.rs  initial_transform.rs  queries.rs  quic_data_plane_extra.rs  quic_directed_io.rs  quic_join.rs  quic_lifecycle.rs  quic_smoke.rs  stream_driver_extra.rs  suite_quic.rs  suite_tcp.rs  suite_tls.rs  tcp_data_plane_extra.rs  tcp_join.rs  tcp_lifecycle.rs  tcp_smoke.rs  tls_data_plane_extra.rs  tls_smoke.rs  transform.rs  transport_handle_extra.rs  transport_new.rs
memberlist-driver/: Cargo.toml  README.md
memberlist-driver/src/: error.rs  lib.rs  observation.rs
memberlist-embassy/: Cargo.toml  README.md
memberlist-embassy/src/: config.rs  error.rs  gossip_io.rs  lib.rs  mailbox.rs  memberlist.rs  resolver.rs  runner.rs  shared.rs  stream_io.rs  time.rs  worker.rs
memberlist-embassy/tests/: handle.rs  lifecycle.rs  loopback.rs  transform.rs
memberlist-embedded/: Cargo.toml  README.md
memberlist-embedded/src/: addr.rs  cidr.rs  config.rs  engine.rs  error.rs  gossip_io.rs  lib.rs  reliable.rs  resolver.rs  stream_io.rs  transform.rs
memberlist-machine/: Cargo.toml
memberlist-machine/src/: ack.rs  addr_bridge.rs  awareness.rs  bridge_phase.rs  broadcast.rs  config.rs  delegate.rs  endpoint.rs  error.rs  event.rs  lib.rs  members.rs  probe.rs  stream.rs  suspicion.rs  wire.rs
memberlist-net/: Cargo.toml
memberlist-net/src/: error.rs  lib.rs  options.rs  packet_processor.rs  promised_processor.rs  tests.rs
memberlist-proto/: Cargo.toml  README.md  build.rs
memberlist-proto/benches/: transform_pipeline.rs
memberlist-proto/fuzz/: .gitignore  Cargo.toml  README.md
memberlist-proto/src/: ack.rs  address.rs  alive.rs  arbitrary_impl.rs  awareness.rs  bad_state.rs  bridge.rs  bridge_phase.rs  broadcast.rs  checksum.rs  cidr.rs  cidr_policy.rs  codec.rs  compression.rs  config.rs  convert.rs  data.rs  delegate.rs  encryption.rs  endpoint.rs  err.rs  error.rs  event.rs  framing.rs  id.rs  label.rs  lib.rs  mathf.rs  maybe_owned.rs  members.rs  messages.rs  meta.rs  metrics.rs  metrics_label.rs  node.rs  payload.rs  ping.rs  probe.rs  proto.rs  push_pull.rs  (+10 more)
memberlist-proto/tests/: codec_roundtrip.rs  fuzzy.rs  transform_roundtrip_property.rs
memberlist-reactor/: Cargo.toml  README.md
memberlist-reactor/src/: cidr.rs  command.rs  delegate.rs  error.rs  events.rs  lib.rs  memberlist.rs  observation.rs  options.rs  quic_driver.rs  resolver.rs  shared.rs  snapshot.rs  stream_driver.rs  transform.rs
memberlist-reactor/tests/: cidr.rs  cidr_quic.rs  handle_api_extra.rs  query_api.rs  quic_directed_io.rs  quic_lifecycle.rs  quic_smoke.rs  shutdown_rebind.rs  suite_quic.rs  suite_tcp.rs  suite_tls.rs  tcp_directed_io.rs  tcp_lifecycle.rs  tcp_smoke.rs  tls_smoke.rs  transform.rs
memberlist-simulation/: Cargo.toml
memberlist-simulation/src/: clock.rs  cluster.rs  faults.rs  lib.rs  network.rs  quic_net.rs  tcp_net.rs  tls_net.rs  virtual_tcp.rs  vopr.rs
memberlist-simulation/tests/: crash_restart.rs  faults_layer.rs  gossip_three_node.rs  history_masking.rs  legacy_alive.rs  legacy_dead.rs  legacy_delegates.rs  legacy_lifecycle.rs  legacy_merge_gossip.rs  legacy_probe.rs  legacy_probe_awareness.rs  legacy_push_pull_ping_reset.rs  legacy_suspect.rs  quic_conformance.rs  suspect_dead.rs  tcp_conformance.rs  tls_conformance.rs  vopr.rs
memberlist-smoltcp/: Cargo.toml  README.md  build.rs
memberlist-smoltcp/src/: addr.rs  config.rs  error.rs  gossip_io.rs  interface.rs  lib.rs  memberlist.rs  reliable.rs  resolver.rs  stream_io.rs  transform.rs
memberlist-smoltcp/tests/: api_parity.rs  gossip.rs  gossip_mtu.rs  harness_smoke.rs  interface.rs  join_leave.rs  reliable_pool.rs  routable.rs  transform.rs
memberlist-wire/: Cargo.toml  build.rs
memberlist-wire/src/: bridge.rs  codec.rs  compression.rs  convert.rs  data.rs  encryption.rs  framing.rs  id.rs  lib.rs  node.rs  typed.rs  wire_type.rs
memberlist/src/: async_std.rs  codec.rs  compio.rs  embassy.rs  embedded.rs  lib.rs  reactor.rs  runtime.rs  smol.rs  smoltcp.rs  tokio.rs
memberlist/tests/: TODO.md  main.rs  smoke.rs
nodejs/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
nodejs/src/: lib.rs
py/: .gitignore  Cargo.toml  README.md  pyproject.toml
py/src/: lib.rs  options.rs
showbiz/: Cargo.toml
showbiz-wasm/: Cargo.toml  wasmer.toml
showbiz-wasm/src/: lib.rs
showbiz/src/: lib.rs
traits/: Cargo.toml
traits/src/: alive_delegate.rs  broadcast.rs  conflict_delegate.rs  delegate.rs  lib.rs  (+4 more)
transport/: Cargo.toml
types/: Cargo.toml
utils/: Cargo.toml
(+1137 files in other folders)
