[workspace]
members = [
  "memberlist-proto",
  "memberlist-compio",
  "memberlist-embedded",
  "memberlist-reactor",
  "memberlist-smoltcp",
  "memberlist-embassy",
  "memberlist-simulation",
  "fuzz",
  "legacy/memberlist",
  "legacy/memberlist-core",
  "legacy/memberlist-wire",
]
# Frozen reference crates (the legacy net/quic transports and the toydb
# example). They do not compile against the current workspace stack and are
# kept on disk for reference only, excluded from the active build.
#
# `memberlist-embassy-qemu` is the bare-metal qemu execution proof for the
# embassy driver. It pins a foreign default target (a Cortex-M machine) and a
# cortex-m-rt runtime, so it cannot participate in the host `--workspace` build;
# it is built and run on its own via `cd memberlist-embassy-qemu && cargo run`.
exclude = [
  "legacy/memberlist-net",
  "legacy/memberlist-quic",
  "examples/toydb",
  "memberlist-embassy-qemu",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/al8n/memberlist"
homepage = "https://github.com/al8n/memberlist"
readme = "README.md"
rust-version = "1.85.0"
keywords = ["gossip", "membership", "failure-detection", "cluster", "distributed"]
categories = ["network-programming", "asynchronous", "algorithms"]

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
among = "0.2"
arc-swap = "1"
auto_impl = "1"
atomic_refcell = "0.1"
agnostic-lite = { version = "0.6", features = ["time"] }
agnostic-io = { version = "0.2", default-features = false }
agnostic = "0.9"
async-lock = "3"
async-channel = "2"
bytes = { version = "1", default-features = false }
byteorder = { version = "1", default-features = false }
varing = { version = "0.13", default-features = false }
cfg-if = "1"
compio = { version = "0.19.0-rc.2", default-features = false }
embassy-net = { version = "0.9", default-features = false }
embassy-time = { version = "0.5", default-features = false }
embassy-sync = { version = "0.8", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
flume = { version = "0.12", default-features = false }
futures-util = { version = "0.3", default-features = false }
hickory-proto = { version = "0.26", default-features = false }
hostaddr = { version = "0.2", default-features = false }
resolv-conf = { version = "0.7", default-features = false }
derive_more = { version = "2", default-features = false }
either = { version = "1", default-features = false }
futures = "0.3"
indexmap = "2"
getifs = "0.6"
getrandom = "0.4"
metrics = "0.24"
nodecraft = { version = "0.9", default-features = false }
paste = "1"
peekable = "0.6"
pin-project = "1"
scopeguard = "1"
serde = { version = "1", features = ["derive", "rc"] }
cheap-clone = { version = "0.3", default-features = false }
triomphe = { version = "0.1", default-features = false }
humantime-serde = "1"
smallvec = "1"
smallvec-wrapper = { version = "0.4", default-features = false }
smol_str = { version = "^0.3.6", default-features = false }
rand = "0.10"
thiserror = { version = "2", default-features = false }
tracing = "0.1"
viewit = "0.1.5"

arbitrary = { version = "1", default-features = false }
quickcheck = { version = "1", default-features = false }

memberlist-core = { version = "0.8", path = "legacy/memberlist-core", default-features = false }
memberlist-proto = { version = "0.1", path = "memberlist-proto", default-features = false }
memberlist-embedded = { version = "0.0.1", path = "memberlist-embedded", default-features = false }
memberlist-embassy = { version = "0.0.1", path = "memberlist-embassy", default-features = false }
memberlist-net = { version = "0.8", path = "legacy/memberlist-net", default-features = false }
memberlist-wire = { version = "0.3", path = "legacy/memberlist-wire", default-features = false }
memberlist-quic = { version = "0.8", path = "legacy/memberlist-quic", default-features = false }
memberlist = { version = "0.8", path = "legacy/memberlist", default-features = false }

[workspace.lints.rust]
rust_2018_idioms = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(compression)',
  'cfg(checksum)',
  'cfg(offload)',
  'cfg(tarpaulin)',
] }
