[workspace]
members = [
  "memberlist",
  "memberlist-proto",
  "memberlist-compio",
  "memberlist-embedded",
  "memberlist-reactor",
  "memberlist-smoltcp",
  "memberlist-embassy",
  "tests/memberlist-simulation",
  "tests/memberlist-test-suite",
]
# `memberlist-embassy-qemu` is the bare-metal qemu execution proof for the
# embassy driver. It pins a foreign default target (a Cortex-M machine) and a
# cortex-m-rt runtime, so it cannot participate in the host `--workspace` build;
# it is built and run on its own via `cd tests/memberlist-embassy-qemu && cargo run`.
exclude = [
  "tests/memberlist-embassy-qemu",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/al8n/memberlist"
homepage = "https://github.com/al8n/memberlist"
readme = "README.md"
rust-version = "1.96.0"
keywords = ["gossip", "membership", "failure-detection", "cluster", "distributed"]
categories = ["network-programming", "asynchronous", "algorithms"]

[workspace.dependencies]
among = "0.2"
arc-swap = "1"
auto_impl = "1"
atomic_refcell = "0.1"
agnostic-lite = { version = "0.6", features = ["time"] }
agnostic-io = { version = "0.2", default-features = false }
agnostic = "0.9"
async-lock = "3"
async-channel = "2"
bytes = { version = "1", default-features = false }
byteorder = { version = "1", default-features = false }
varing = { version = "0.13", default-features = false }
cfg-if = "1"
compio = { version = "0.19.0", default-features = false }
embassy-net = { version = "0.9", default-features = false }
embassy-time = { version = "0.5", default-features = false }
embassy-sync = { version = "0.8", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
flume = { version = "0.12", default-features = false }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false }
hickory-proto = { version = "0.26", default-features = false }
hostaddr = { version = "0.2", default-features = false }
resolv-conf = { version = "0.7", default-features = false }
derive_more = { version = "2", default-features = false }
either = { version = "1", default-features = false }
futures = "0.3"
indexmap = "2"
ipnet = { version = "2", default-features = false }
getifs = "0.6"
# 0.2.2 fixes the RFC6890 IPv6 table (2001::/16 over-broad); the getifs-backed
# `Public` advertise filter depends on that fix, so pin the floor explicitly —
# getifs's own `iprfc = "0.2"` requirement would otherwise admit the buggy 0.2.0.
iprfc = "0.2.2"
getrandom = "0.4"
metrics = "0.24"
paste = "1"
pin-project = "1"
scopeguard = "1"
serde = { version = "1", features = ["derive", "rc"] }
cheap-clone = { version = "0.3", default-features = false }
triomphe = { version = "0.1", default-features = false }
humantime-serde = "1"
smallvec = "1"
smallvec-wrapper = { version = "0.4", default-features = false }
smol_str = { version = "0.3", default-features = false }
rand = "0.10"
thiserror = { version = "2", default-features = false }
tracing = "0.1"
viewit = "0.1.5"

memberlist-proto = { version = "0.4", path = "memberlist-proto", default-features = false }
memberlist-reactor = { version = "0.0.1", path = "memberlist-reactor", default-features = false }
memberlist-compio = { version = "0.0.1", path = "memberlist-compio", default-features = false }
memberlist-smoltcp = { version = "0.0.1", path = "memberlist-smoltcp", default-features = false }
memberlist-embedded = { version = "0.0.1", path = "memberlist-embedded", default-features = false }
memberlist-embassy = { version = "0.0.1", path = "memberlist-embassy", default-features = false }

[workspace.lints.rust]
rust_2018_idioms = "warn"
