[package]
name = "showbiz-dart"
version = "0.0.0"
edition = "2021"

[lib]
name = "showbiz"
crate-type = ["cdylib"]

[dependencies]
ipnet = "2.7"
showbiz-core = { path = "../core" }
flutter_rust_bridge = { verion = "1.75", features = ["chrono"] }
flutter_rust_bridge_macros = "1.75"
viewit = { workspace = true }
serde = { version = "1", features = ["derive"] }
chrono = {version = "0.4", features = ["serde"] }

[build-dependencies]
flutter_rust_bridge_codegen = { version = "1.75", features = ["chrono"] }