[package]
name = "memberlist-types-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

memberlist-types = { path = "../types", features = ["arbitrary", "std"] }

[[bin]]
name = "messages"
path = "fuzz_targets/messages.rs"
test = false
doc = false
bench = false
