[package]
name = "memberlist-compio"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "compio-based async driver for the Sans-I/O memberlist machine"

[features]
default = ["tcp"]
tcp = ["memberlist-proto/tcp"]
tls-rustls-ring = ["memberlist-proto/tls-rustls-ring", "compio/rustls"]
tls-rustls-aws-lc-rs = ["memberlist-proto/tls-rustls-aws-lc-rs"]
quic = ["memberlist-proto/quic"]
quic-rustls-ring = ["quic", "memberlist-proto/quic-rustls-ring"]
quic-rustls-aws-lc-rs = ["quic", "memberlist-proto/quic-rustls-aws-lc-rs"]
compression-lz4 = ["memberlist-proto/compression-lz4"]
compression-snappy = ["memberlist-proto/compression-snappy"]
compression-zstd = ["memberlist-proto/compression-zstd"]
compression-brotli = ["memberlist-proto/compression-brotli"]
encryption-aes-gcm = ["memberlist-proto/encryption-aes-gcm"]
encryption-chacha20-poly1305 = ["memberlist-proto/encryption-chacha20-poly1305"]
dns = ["dep:hickory-proto", "dep:resolv-conf"]

[dependencies]
memberlist = { workspace = true }
memberlist-proto = { workspace = true }
hostaddr = { workspace = true }
smol_str = { workspace = true }
compio = { workspace = true, features = ["net", "runtime", "macros", "time"] }
arc-swap = { workspace = true }
bytes = { workspace = true, features = ["std"] }
flume = { workspace = true, default-features = false, features = ["async"] }
futures-util = { workspace = true, default-features = false, features = ["std", "async-await-macro"] }
thiserror = { workspace = true }
hickory-proto = { workspace = true, optional = true, default-features = false, features = ["std"] }
resolv-conf = { workspace = true, optional = true }

[dev-dependencies]
rcgen = "0.14"
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
smol_str = { workspace = true }
quinn-proto = { version = "0.11", features = ["rustls-ring"] }

[[test]]
name = "tcp_smoke"
required-features = ["tcp"]

[[test]]
name = "tcp_join"
required-features = ["tcp"]

[[test]]
name = "tcp_lifecycle"
required-features = ["tcp"]

[[test]]
name = "tls_smoke"
required-features = ["tls-rustls-ring"]

[[test]]
name = "quic_smoke"
required-features = ["quic-rustls-ring"]

[[test]]
name = "quic_join"
required-features = ["quic-rustls-ring"]

[[test]]
name = "quic_lifecycle"
required-features = ["quic-rustls-ring"]

[[test]]
name = "initial_transform"
required-features = ["tcp", "encryption-aes-gcm"]

[[test]]
name = "transform"
required-features = ["tcp"]
