[package]
name = "memberlist-compio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "compio-based async driver for the Sans-I/O memberlist machine"

[features]
default = ["tcp"]
tcp = ["memberlist-proto/tcp"]
# Emit `tracing` spans around the public driver operations and forward the
# machine's `tracing` feature.
tracing = ["dep:tracing", "memberlist-proto/tracing"]

# Optional config layering on the user-facing `*Options` types. `serde` adds
# gated Serialize/Deserialize (config files, round-trip); `clap` adds gated
# `clap::Args` derives (CLI flags + env vars). Both leave the default build
# untouched. `serde` uses `humantime-serde` for the `Duration` fields and pulls
# the proto serde layer for the composed compression / checksum / encryption
# sub-options; `clap` uses `humantime` to parse the `Duration` flags. compio is
# std-only, so neither needs a `std` passthrough.
serde = ["dep:serde", "dep:humantime-serde", "memberlist-proto/serde"]
clap = ["dep:clap", "dep:humantime", "memberlist-proto/clap"]
tls-rustls-ring = ["memberlist-proto/tls-rustls-ring", "compio/rustls"]
tls-rustls-aws-lc-rs = ["memberlist-proto/tls-rustls-aws-lc-rs"]
quic = ["memberlist-proto/quic"]
quic-rustls-ring = ["quic", "memberlist-proto/quic-rustls-ring"]
quic-rustls-aws-lc-rs = ["quic", "memberlist-proto/quic-rustls-aws-lc-rs"]
lz4 = ["memberlist-proto/lz4"]
snappy = ["memberlist-proto/snappy"]
zstd = ["memberlist-proto/zstd"]
brotli = ["memberlist-proto/brotli"]
crc32 = ["memberlist-proto/crc32"]
xxhash32 = ["memberlist-proto/xxhash32"]
xxhash64 = ["memberlist-proto/xxhash64"]
xxhash3 = ["memberlist-proto/xxhash3"]
murmur3 = ["memberlist-proto/murmur3"]
aes-gcm = ["memberlist-proto/aes-gcm"]
chacha20-poly1305 = ["memberlist-proto/chacha20-poly1305"]
cidr = ["memberlist-proto/cidr"]
dns = ["dep:hickory-proto", "dep:resolv-conf"]
# Auto-detect the advertise address from the host's own interfaces (via `getifs`).
getifs = ["dep:getifs", "dep:iprfc"]

[dependencies]
memberlist-proto = { workspace = true, features = ["std"] }
memberlist-driver = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng", "sys_rng"] }
hostaddr = { workspace = true, features = ["std", "smol_str"] }
smol_str.workspace = true
# Both backends select compio-driver's "fusion" driver on Linux: io_uring
# preferred, with a transparent polling (epoll) fallback when io_uring is
# unavailable. io_uring is the driver's native backend — its anti-starvation
# design relies on completion semantics, and polling alone starves the driver
# under load (e.g. a UDP flood). The workspace pins `default-features = false`
# (stripping the default io-uring), so a backend feature is required or
# compio-driver compiles its stub PAL and panics at runtime on Linux. Off-Linux,
# `polling` (kqueue) is the only backend and `io-uring` is inert.
compio = { workspace = true, features = [
  "net",
  "runtime",
  "macros",
  "time",
  "io-uring",
  "polling",
] }
bytes = { workspace = true, features = ["std"] }
flume = { workspace = true, default-features = false, features = ["async"] }
lochan.workspace = true
futures-channel.workspace = true
futures-util = { workspace = true, default-features = false, features = [
  "std",
  "async-await-macro",
] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
hickory-proto = { workspace = true, optional = true, default-features = false, features = [
  "std",
] }
resolv-conf = { workspace = true, optional = true }
getifs = { workspace = true, optional = true }
iprfc = { workspace = true, optional = true }

[dev-dependencies]
memberlist-test-suite = { path = "../tests/memberlist-test-suite" }
serde_json.workspace = true
rcgen = "0.14"
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
smol_str.workspace = true
quinn-proto = { version = "0.11", features = ["rustls-ring"] }

[[test]]
name = "suite_tcp"
required-features = ["tcp"]

[[test]]
name = "suite_tls"
required-features = ["tls-rustls-ring"]

[[test]]
name = "suite_quic"
required-features = ["quic-rustls-ring"]

[[test]]
name = "tcp_smoke"
required-features = ["tcp"]

[[test]]
name = "tcp_join"
required-features = ["tcp"]

[[test]]
name = "tcp_lifecycle"
required-features = ["tcp"]

[[test]]
name = "cidr"
required-features = ["tcp", "cidr"]

[[test]]
name = "cidr_quic"
required-features = ["quic-rustls-ring", "cidr"]

[[test]]
name = "tls_smoke"
required-features = ["tls-rustls-ring"]

[[test]]
name = "quic_smoke"
required-features = ["quic-rustls-ring"]

[[test]]
name = "quic_join"
required-features = ["quic-rustls-ring"]

[[test]]
name = "quic_lifecycle"
required-features = ["quic-rustls-ring"]

[[test]]
name = "initial_transform"
required-features = ["tcp", "aes-gcm"]

[[test]]
name = "transform"
required-features = ["tcp"]
