[package]
name = "memberlist-driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime-agnostic glue shared by the memberlist async driver crates"

[dependencies]
memberlist-proto = { workspace = true, features = ["std"] }

[dev-dependencies]
smol_str = { workspace = true }

[lints]
workspace = true
